Task 10 fix cart +truncate

--- a/styles/login.scss
+++ b/styles/login.scss
@@ -346,3 +346,9 @@ $box-array: (
     width: 100%;
     height: 100%;
 }
+
+
+.disabled{
+    pointer-events: none;
+    opacity: 0.5;
+}
